Enhance styling for fake ads in fakenews.html with improved layout and visual effects

--- a/fakenews.html
+++ b/fakenews.html
@@ -96,10 +96,21 @@
       border-radius: 6px;
     }
     .fake-ads .ad-title {
-      font-weight: bold;
-      color: #c00;
-      margin-top: 10px;
-      font-size: 1em;
+      font-weight: bold !important;
+      color: #c00 !important;
+      margin-top: 10px !important;
+      font-size: 1em !important;
+      padding: 8px !important;
+      background-color: rgba(255, 255, 255, 0.95) !important;
+      border-radius: 4px !important;
+      text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1) !important;
+      min-height: 2.5em !important;
+      display: flex !important;
+      align-items: center !important;
+      justify-content: center !important;
+      text-align: center !important;
+      line-height: 1.2 !important;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1) !important;
     }
     .popup-overlay {
       display: none;
