--- a/fakenews.html
+++ b/fakenews.html
@@ -95,7 +95,7 @@
       width: 100%;
       border-radius: 6px;
     }
-    .fake-ads .ad-title {
+    .fake-ads .ad .ad-title {
       font-weight: bold !important;
       color: #c00 !important;
       margin-top: 10px !important;
@@ -111,6 +111,21 @@
       text-align: center !important;
       line-height: 1.2 !important;
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1) !important;
+      visibility: visible !important;
+      opacity: 1 !important;
+      position: relative !important;
+      z-index: 1 !important;
+    }
+    /* Debug styles - can be removed after fixing */
+    .fake-ads .ad .ad-title::after {
+      content: '' !important;
+      position: absolute !important;
+      top: 0 !important;
+      left: 0 !important;
+      right: 0 !important;
+      bottom: 0 !important;
+      background: rgba(255, 255, 255, 0.1) !important;
+      pointer-events: none !important;
     }
     .popup-overlay {
       display: none;
@@ -251,6 +266,26 @@
   </div>
 
   <script>
+    // Debug code - can be removed after fixing
+    window.addEventListener('load', function() {
+      const adTitles = document.querySelectorAll('.fake-ads .ad .ad-title');
+      console.log('Found ad titles:', adTitles.length);
+      
+      // Log the state of ad titles every second
+      setInterval(() => {
+        adTitles.forEach((title, index) => {
+          const style = window.getComputedStyle(title);
+          console.log(`Ad title ${index + 1}:`, {
+            visible: style.visibility === 'visible',
+            opacity: style.opacity,
+            display: style.display,
+            position: style.position,
+            zIndex: style.zIndex
+          });
+        });
+      }, 1000);
+    });
+
     function showPopup() {
       document.getElementById('subscription-popup').style.display = 'flex';
     }
