Update byline in fakenews.html to include version number

--- a/fakenews.html
+++ b/fakenews.html
@@ -192,7 +192,7 @@
 
   <main>
     <div class="headline">President Donald J. Trump Wants to Run for a Third Term — Here's What You Need to Know</div>
-    <div class="byline">By Gabriel Landry | April 31st, 2025</div>
+    <div class="byline">By Gabriel Landry | April 31st, 2025 ver 1.0</div>
     <img class="image" src="https://s.yimg.com/ny/api/res/1.2/3sw.n0ZVQS8dREno.U86lQ--/YXBwaWQ9aGlnaGxhbmRlcjt3PTEyMDA7aD03NTQ-/https://media.zenfs.com/en/the_telegraph_258/d783e6e0b583c1cb5a9bf23749fde802" alt="Trump by Anna Moneymaker/Getty Images" />
 
     <p>When interviewed by <strong>Gabriel Landry</strong> with <strong>IN-CREDIBLE NEWS</strong>, D.J.T was questioned about his ambitions for a third term.</p>
