--- a/fakenews.html
+++ b/fakenews.html
@@ -74,7 +74,7 @@
     .fake-ads {
       display: flex;
       flex-wrap: wrap;
-      gap: 20px;
+      gap: 60px;
       margin: 40px 0;
       justify-content: center;
     }
@@ -87,6 +87,8 @@
       text-align: center;
       padding: 10px;
       transition: box-shadow 0.2s;
+      position: relative;
+      overflow: visible;
     }
     .fake-ads .ad:hover {
       box-shadow: 0 4px 16px rgba(255, 102, 0, 0.15);
@@ -94,27 +96,24 @@
     .fake-ads .ad img {
       width: 100%;
       border-radius: 6px;
+      display: block;
     }
     .fake-ads .ad .ad-title {
-      font-weight: bold !important;
-      color: #c00 !important;
-      margin-top: 10px !important;
-      font-size: 1em !important;
-      padding: 8px !important;
-      background-color: rgba(255, 255, 255, 0.95) !important;
-      border-radius: 4px !important;
-      text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1) !important;
-      min-height: 2.5em !important;
-      display: flex !important;
-      align-items: center !important;
-      justify-content: center !important;
-      text-align: center !important;
-      line-height: 1.2 !important;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1) !important;
-      visibility: visible !important;
-      opacity: 1 !important;
-      position: relative !important;
-      z-index: 1 !important;
+      position: absolute;
+      bottom: -40px;
+      left: 0;
+      right: 0;
+      background: white;
+      padding: 10px;
+      margin: 0;
+      color: #c00;
+      font-weight: bold;
+      font-size: 1em;
+      text-align: center;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+      border-radius: 4px;
+      z-index: 1000;
+      pointer-events: none;
     }
     /* Debug styles - can be removed after fixing */
     .fake-ads .ad .ad-title::after {
